Rydder i ytelsefordeling repo